--- a/src/style/Info.css
+++ b/src/style/Info.css
@@ -13,7 +13,6 @@
     height: auto;
     width: 100%;
     display: block;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 #imgContainer {
